--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
         var db = indexedDB.open("dummy_indexdb", 1); // iOS 14.6 fix; the call to open indexdb hangs forever otherwise
 
         const buildUrl = "Build";
-        const loaderUrl = buildUrl + "/ArMarker.loader.js";
+        const loaderUrl = buildUrl + "/ARMarkerDemo.loader.js";
         const config = {
-            dataUrl: buildUrl + "/89bae4ae8091f432f4653bf4fa9be12f.data.br",
-            frameworkUrl: buildUrl + "/cf12653f60f1a00b64e3a9360182a53f.js.br",
-            codeUrl: buildUrl + "/d509c7303e6494fa8fba56f6a62a33ea.wasm.br",
+            dataUrl: buildUrl + "/8441509e3ff57e0f653ed551661cd2f7.data.unityweb",
+            frameworkUrl: buildUrl + "/cf12653f60f1a00b64e3a9360182a53f.js.unityweb",
+            codeUrl: buildUrl + "/d509c7303e6494fa8fba56f6a62a33ea.wasm.unityweb",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "Stacked Learning",
             productName: "Ardemo",
